<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_button"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map"
        app:showAsAction="never" />

    <item
        android:id="@+id/language_button"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/language"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout_button"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>