...
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/gambar"
        app:layout_constraintBottom_toTopOf="@+id/titleTextViewWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
...
